--- a/sample-nodejs-app/index.html
+++ b/sample-nodejs-app/index.html
@@ -3,7 +3,7 @@
 <!--2023 updates -->
 <head>
   <meta charset="utf-8">
-  <title> Simple Calculator </title>
+  <title> Simple Calculators </title>
   <style type="text/css">
 
   #sum {
